syntax = "proto3";

package grpc.health.v1;

message HealthCheckRequest {
  string service = 1; // Optional: name of the service to check; empty means check overall health
}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
    SERVICE_UNKNOWN = 3; // Used only by the Watch method.
  }
  ServingStatus status = 1;
}

service HealthCheckService {
  rpc HealthCheck (HealthCheckRequest) returns (HealthCheckResponse) {};
}